--- a/latex/classHTMLTags.tex
+++ b/latex/classHTMLTags.tex
@@ -1,6 +1,15 @@
 \hypertarget{classHTMLTags}{\section{H\-T\-M\-L\-Tags Class Reference}
 \label{classHTMLTags}\index{H\-T\-M\-L\-Tags@{H\-T\-M\-L\-Tags}}
 }
+
+
+Base class containong Basic Html Tags and methods.  
+
+
+
+
+{\ttfamily \#include $<$htmltags.\-h$>$}
+
 Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -55,9 +64,9 @@ Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 \hypertarget{classHTMLTags_a23b5212cbe6e637c5a15b2ddf0144884}{int {\bfseries k}}\label{classHTMLTags_a23b5212cbe6e637c5a15b2ddf0144884}
 
 \item 
-\hypertarget{classHTMLTags_a9906347d29a4256a824e4fb0ecd89f62}{string {\bfseries branch\-\_\-name}}\label{classHTMLTags_a9906347d29a4256a824e4fb0ecd89f62}
+\hypertarget{classHTMLTags_a9906347d29a4256a824e4fb0ecd89f62}{string \hyperlink{classHTMLTags_a9906347d29a4256a824e4fb0ecd89f62}{branch\-\_\-name}}\label{classHTMLTags_a9906347d29a4256a824e4fb0ecd89f62}
 
-\item 
+\begin{DoxyCompactList}\small\item\em branch field names \end{DoxyCompactList}\item 
 \hypertarget{classHTMLTags_a150314c7c15f317e6600129991d342bb}{string {\bfseries total\-\_\-subjects}}\label{classHTMLTags_a150314c7c15f317e6600129991d342bb}
 
 \item 
@@ -70,9 +79,9 @@ Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 \hypertarget{classHTMLTags_a1987b2f2a9c4bc84fbfc8b1fdf031016}{string {\bfseries total\-\_\-branches}}\label{classHTMLTags_a1987b2f2a9c4bc84fbfc8b1fdf031016}
 
 \item 
-\hypertarget{classHTMLTags_a5e3f90482bd76a901ed18ecae9fe9eff}{string {\bfseries prefix}}\label{classHTMLTags_a5e3f90482bd76a901ed18ecae9fe9eff}
+\hypertarget{classHTMLTags_a5e3f90482bd76a901ed18ecae9fe9eff}{string \hyperlink{classHTMLTags_a5e3f90482bd76a901ed18ecae9fe9eff}{prefix}}\label{classHTMLTags_a5e3f90482bd76a901ed18ecae9fe9eff}
 
-\item 
+\begin{DoxyCompactList}\small\item\em roll no field names \end{DoxyCompactList}\item 
 \hypertarget{classHTMLTags_ae9d63c6558b69ef8d75f323cf4f6ce4e}{string {\bfseries start\-\_\-rollno}}\label{classHTMLTags_ae9d63c6558b69ef8d75f323cf4f6ce4e}
 
 \item 
@@ -82,9 +91,9 @@ Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 \hypertarget{classHTMLTags_a8d93700dbb0556bd4e4dc19e8563790b}{string {\bfseries not\-\_\-included}}\label{classHTMLTags_a8d93700dbb0556bd4e4dc19e8563790b}
 
 \item 
-\hypertarget{classHTMLTags_a5d6a6161c3ac309e53646e9d416983b6}{string {\bfseries total\-\_\-centres}}\label{classHTMLTags_a5d6a6161c3ac309e53646e9d416983b6}
+\hypertarget{classHTMLTags_a5d6a6161c3ac309e53646e9d416983b6}{string \hyperlink{classHTMLTags_a5d6a6161c3ac309e53646e9d416983b6}{total\-\_\-centres}}\label{classHTMLTags_a5d6a6161c3ac309e53646e9d416983b6}
 
-\item 
+\begin{DoxyCompactList}\small\item\em room field names \end{DoxyCompactList}\item 
 \hypertarget{classHTMLTags_a43ed580a29dfa991cf7390fb1de5fe61}{string {\bfseries centre\-\_\-no}}\label{classHTMLTags_a43ed580a29dfa991cf7390fb1de5fe61}
 
 \item 
@@ -100,9 +109,9 @@ Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 \hypertarget{classHTMLTags_a37a95acb060c9549ec409445ff65e37a}{string {\bfseries cols}}\label{classHTMLTags_a37a95acb060c9549ec409445ff65e37a}
 
 \item 
-\hypertarget{classHTMLTags_a1badb97e1818e61856bafaf34008bd93}{string {\bfseries strategy}}\label{classHTMLTags_a1badb97e1818e61856bafaf34008bd93}
+\hypertarget{classHTMLTags_a1badb97e1818e61856bafaf34008bd93}{string \hyperlink{classHTMLTags_a1badb97e1818e61856bafaf34008bd93}{strategy}}\label{classHTMLTags_a1badb97e1818e61856bafaf34008bd93}
 
-\item 
+\begin{DoxyCompactList}\small\item\em strategy option \end{DoxyCompactList}\item 
 \hypertarget{classHTMLTags_ad5f94eaa2401829101a72c04c63663e2}{string {\bfseries exam\-\_\-name}}\label{classHTMLTags_ad5f94eaa2401829101a72c04c63663e2}
 
 \item 
@@ -115,6 +124,21 @@ Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 \hypertarget{classHTMLTags_abcbead0e2f1104cfbac02b0f17aa4e96}{string {\bfseries exam\-\_\-venue}}\label{classHTMLTags_abcbead0e2f1104cfbac02b0f17aa4e96}
 
 \item 
+\hypertarget{classHTMLTags_a8405e47fa2e5af6382646e2098b01821}{string {\bfseries h\-\_\-branch\-\_\-name}}\label{classHTMLTags_a8405e47fa2e5af6382646e2098b01821}
+
+\item 
+\hypertarget{classHTMLTags_a236edd1aac739f41378b623502b90824}{string {\bfseries h\-\_\-total\-\_\-subjects}}\label{classHTMLTags_a236edd1aac739f41378b623502b90824}
+
+\item 
+\hypertarget{classHTMLTags_a28aef20f4f3b096651d5a48faffde4c4}{string {\bfseries h\-\_\-subject\-\_\-code}}\label{classHTMLTags_a28aef20f4f3b096651d5a48faffde4c4}
+
+\item 
+\hypertarget{classHTMLTags_a3eaa9314414f9d0772929e88cdb8ae0e}{string {\bfseries h\-\_\-subject\-\_\-name}}\label{classHTMLTags_a3eaa9314414f9d0772929e88cdb8ae0e}
+
+\item 
+\hypertarget{classHTMLTags_a71789f292e6d0dc11baa1e778bbb08c9}{string {\bfseries h\-\_\-total\-\_\-branches}}\label{classHTMLTags_a71789f292e6d0dc11baa1e778bbb08c9}
+
+\item 
 \hypertarget{classHTMLTags_ad72c63f88e720e8a23e457146d208578}{ifstream {\bfseries infile}}\label{classHTMLTags_ad72c63f88e720e8a23e457146d208578}
 
 \item 
@@ -122,6 +146,9 @@ Inheritance diagram for H\-T\-M\-L\-Tags\-:\begin{figure}[H]
 
 \end{DoxyCompactItemize}
 
+
+\subsection{Detailed Description}
+Base class containong Basic Html Tags and methods. 
 
 The documentation for this class was generated from the following files\-:\begin{DoxyCompactItemize}
 \item 
