--- a/latex/md_README.tex
+++ b/latex/md_README.tex
@@ -38,7 +38,7 @@ Check \href{https://github.com/GreatDevelopers/bakaplan/blob/master/INSTALLATION
 
 Dr. Hardeep Singh Rai
 
-Website\-: \href{http://gndec.ac.in/~hsrai}{\tt http\-://gndec.\-ac.\-in/$\sim$hsrai}
+Website\-: \href{http://hs.raiandrai.com/}{\tt http\-://hs.\-raiandrai.\-com/}
 
 {\bfseries Developer}
 
