--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -10,5 +10,7 @@ file {\bfseries htmltags.\-cc}
 \item 
 file {\bfseries htmltags.\-h}
 \item 
+file {\bfseries pagelayout.\-cc}
+\item 
 file {\bfseries pagelayout.\-h}
 \end{DoxyCompactItemize}
